--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,3 +1,9 @@
-<div class="dog-image">
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="/css/main.css" type="text/css" rel="stylesheet" />
+    </head>
+    <body>
+        <div class="dog-image">
     <img src="<%= imgURL %>" />
-</div>
+        </div>
