--- a/app/views/pets.ejs
+++ b/app/views/pets.ejs
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link href="/css/main.css" type="text/css" rel="stylesheet" />
-    </head>
-    <body>
+
         <% include partials/header.ejs %>
         <div class="dog-info">
             <h1><%= name %></h1>
             <h2><%= description %></h2>
         </div>
         <footer>Made in DigitalCrafts</footer>
+        <a href="/dogs?num=<%= nextNum %>">Next</a>
     </body>
 </html>
